More moving stuff around
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65401 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -4468,6 +4468,13 @@ at \url{wikipedia.org/wiki/Shortest_path_problem}.
 \end{ex}
 
 
+\chapter{Case study: Files and Strings}
+
+In this chapter, we will bring several chapters together 
+to write some simple programs that scna data stored in files, 
+looking for various bits of information.
+
+% TBD - Goal is to motivte functions by getting larger and larger
 
 \chapter{Functions}
 \label{funcchap}
@@ -6119,573 +6126,6 @@ help, see \url{wikipedia.org/wiki/Euclidean_algorithm}.
 
 \end{ex}
 
-
-
-
-
-\chapter{Case study: word play}
-
-\section{Reading word lists}
-\label{wordlist}
-
-For the exercises in this chapter we need a list of English words.
-There are lots of word lists available on the Web, but the one most
-suitable for our purpose is one of the word lists collected and
-contributed to the public domain by Grady Ward as part of the Moby
-lexicon project\footnote{\url{wikipedia.org/wiki/Moby_Project}}.  It
-is a list of 113,809 official crosswords; that is, words that are
-considered valid in crossword puzzles and other word games.  In the
-Moby collection, the filename is {\tt 113809of.fic}; I include a copy
-of this file, with the simpler name {\tt words.txt}, along with
-Swampy.
-
-\index{Swampy}
-\index{crosswords}
-
-This file is in plain text, so you can open it with a text
-editor, but you can also read it from Python.  The built-in
-function {\tt open} takes the name of the file as a parameter
-and returns a {\bf file object} you can use to read the file.
-
-\index{open function}
-\index{function!open}
-\index{plain text}
-\index{text!plain}
-\index{object!file}
-\index{file object}
-
-\beforeverb
-\begin{verbatim}
->>> fin = open('words.txt')
->>> print fin
-<open file 'words.txt', mode 'r' at 0xb7f4b380>
-\end{verbatim}
-\afterverb
-%
-{\tt fin} is a common name for a file object used for
-input.  Mode \verb"'r'" indicates that this file is open for
-reading (as opposed to \verb"'w'" for writing).
-
-\index{readline method}
-\index{method!readline}
-
-The file object provides several methods for reading, including
-{\tt readline}, which reads characters from the file
-until it gets to a newline and returns the result as a
-string:
-
-\beforeverb
-\begin{verbatim}
->>> fin.readline()
-'aa\r\n'
-\end{verbatim}
-\afterverb
-%
-The first word in this particular list is ``aa,'' which is a kind of
-lava.  The sequence \verb"\r\n" represents two whitespace characters,
-a carriage return and a newline, that separate this word from the
-next.
-
-The file object keeps track of where it is in the file, so
-if you call {\tt readline} again, you get the next word:
-
-\beforeverb
-\begin{verbatim}
->>> fin.readline()
-'aah\r\n'
-\end{verbatim}
-\afterverb
-%
-The next word is ``aah,'' which is a perfectly legitimate
-word, so stop looking at me like that.
-Or, if it's the whitespace that's bothering you,
-we can get rid of it with the string method {\tt strip}:
-
-\index{strip method}
-\index{method!strip}
-
-\beforeverb
-\begin{verbatim}
->>> line = fin.readline()
->>> word = line.strip()
->>> print word
-aahed
-\end{verbatim}
-\afterverb
-%
-You can also use a file object as part of a {\tt for} loop.
-This program reads {\tt words.txt} and prints each word, one
-per line:
-
-\index{open function}
-\index{function!open}
-
-\beforeverb
-\begin{verbatim}
-fin = open('words.txt')
-for line in fin:
-    word = line.strip()
-    print word
-\end{verbatim}
-\afterverb
-%
-
-\begin{ex}
-Write a program that reads {\tt words.txt} and prints only the
-words with more than 20 characters (not counting whitespace).
-
-\index{whitespace}
-
-\end{ex}
-
-
-\section{Exercises}
-
-There are solutions to these exercises in the next section.
-You should at least attempt each one before you read the solutions.
-
-\begin{ex}
-In 1939 Ernest Vincent Wright published a 50,000 word novel called
-{\em Gadsby} that does not contain the letter ``e.''  Since ``e'' is
-the most common letter in English, that's not easy to do.
-
-In fact, it is difficult to construct a solitary thought without using
-that most common symbol.  It is slow going at first, but with caution
-and hours of training you can gradually gain facility.
-
-All right, I'll stop now.
-
-Write a function called \verb"has_no_e" that returns {\tt True} if
-the given word doesn't have the letter ``e'' in it.
-
-Modify your program from the previous section to print only the words
-that have no ``e'' and compute the percentage of the words in the list
-have no ``e.''
-
-\index{lipogram}
-
-\end{ex}
-
-
-\begin{ex} 
-Write a function named {\tt avoids}
-that takes a word and a string of forbidden letters, and
-that returns {\tt True} if the word doesn't use any of the forbidden
-letters.
-
-Modify your program to prompt the user to enter a string
-of forbidden letters and then print the number of words that
-don't contain any of them.
-Can you find a combination of 5 forbidden letters that
-excludes the smallest number of words?
-\end{ex}
-
-
-
-\begin{ex}
-Write a function named \verb"uses_only" that takes a word and a
-string of letters, and that returns {\tt True} if the word contains
-only letters in the list.  Can you make a sentence using only the
-letters {\tt acefhlo}?  Other than ``Hoe alfalfa?''
-\end{ex}
-
-
-\begin{ex} 
-Write a function named \verb"uses_all" that takes a word and a
-string of required letters, and that returns {\tt True} if the word
-uses all the required letters at least once.  How many words are there
-that use all the vowels {\tt aeiou}?  How about {\tt aeiouy}?
-\end{ex}
-
-
-\begin{ex}
-Write a function called \verb"is_abecedarian" that returns
-{\tt True} if the letters in a word appear in alphabetical order
-(double letters are ok).  
-How many abecedarian words are there?
-\end{ex}
-
-\index{abecedarian}
-
-
-%\begin{ex}
-%\label{palindrome}
-%A palindrome is a word that reads the same
-%forward and backward, like ``rotator'' and ``noon.''
-%Write a boolean function named \verb"is_palindrome" that
-%takes a string as a parameter and returns {\tt True} if it is
-%a palindrome.
-
-%Modify your program from the previous section to print all
-%of the palindromes in the word list and then print the total
-%number of palindromes.
-%\end{ex}
-
-
-
-\section{Search}
-
-\index{search pattern}
-\index{pattern!search}
-
-All of the exercises in the previous section have something
-in common; they can be solved with the search pattern we saw
-in Section~\ref{find}.  The simplest example is:
-
-\beforeverb
-\begin{verbatim}
-def has_no_e(word):
-    for letter in word:
-        if letter == 'e':
-            return False
-    return True
-\end{verbatim}
-\afterverb
-%
-The {\tt for} loop traverses the characters in {\tt word}.  If we find
-the letter ``e'', we can immediately return {\tt False}; otherwise we
-have to go to the next letter.  If we exit the loop normally, that
-means we didn't find an ``e'', so we return {\tt True}.
-
-\index{traversal}
-\index{in operator}
-\index{operator!in}
-
-You can write this function more concisely using the {\tt in}
-operator, but I started with this version because it 
-demonstrates the logic of the search pattern.
-
-\index{generalization}
-
-{\tt avoids} is a more general version of \verb"has_no_e" but it
-has the same structure:
-
-\beforeverb
-\begin{verbatim}
-def avoids(word, forbidden):
-    for letter in word:
-        if letter in forbidden:
-            return False
-    return True
-\end{verbatim}
-\afterverb
-%
-We can return {\tt False} as soon as we find a forbidden letter;
-if we get to the end of the loop, we return {\tt True}.
-
-\verb"uses_only" is similar except that the sense of the condition
-is reversed:
-
-\beforeverb
-\begin{verbatim}
-def uses_only(word, available):
-    for letter in word: 
-        if letter not in available:
-            return False
-    return True
-\end{verbatim}
-\afterverb
-%
-Instead of a list of forbidden letters, we have a list of available
-letters.  If we find a letter in {\tt word} that is not in
-{\tt available}, we can return {\tt False}.
-
-\verb"uses_all" is similar except that we reverse the role
-of the word and the string of letters:
-
-\beforeverb
-\begin{verbatim}
-def uses_all(word, required):
-    for letter in required: 
-        if letter not in word:
-            return False
-    return True
-\end{verbatim}
-\afterverb
-%
-Instead of traversing the letters in {\tt word}, the loop
-traverses the required letters.  If any of the required letters
-do not appear in the word, we can return {\tt False}.
-
-\index{traversal}
-
-If you were really thinking like a computer scientist, you would
-have recognized that \verb"uses_all" was an instance of a
-previously-solved problem, and you would have written:
-
-\beforeverb
-\begin{verbatim}
-def uses_all(word, required):
-    return uses_only(required, word)
-\end{verbatim}
-\afterverb
-%
-This is an example of a program development method called {\bf problem
-recognition}, which means that you recognize the problem you are
-working on as an instance of a previously-solved problem, and apply a
-previously-developed solution.
-
-\index{problem recognition}
-\index{development plan!problem recognition}
-
-
-\section{Looping with indices}
-
-\index{looping!with indices}
-\index{index!looping with}
-
-I wrote the functions in the previous section with {\tt for}
-loops because I only needed the characters in the strings; I didn't
-have to do anything with the indices.
-
-For \verb"is_abecedarian" we have to compare adjacent letters,
-which is a little tricky with a {\tt for} loop:
-
-\beforeverb
-\begin{verbatim}
-def is_abecedarian(word):
-    previous = word[0]
-    for c in word:
-        if c < previous:
-            return False
-        previous = c
-    return True
-\end{verbatim}
-\afterverb
-
-
-Another option is to use a {\tt while} loop:
-
-\beforeverb
-\begin{verbatim}
-def is_abecedarian(word):
-    i = 0
-    while i < len(word)-1:
-        if word[i+1] < word[i]:
-            return False
-        i = i+1
-    return True
-\end{verbatim}
-\afterverb
-%
-The loop starts at {\tt i=0} and ends when {\tt i=len(word)-1}.  Each
-time through the loop, it compares the $i$th character (which you can
-think of as the current character) to the $i+1$th character (which you
-can think of as the next).
-
-If the next character is less than (alphabetically before) the current
-one, then we have discovered a break in the abecedarian trend, and
-we return {\tt False}.
-
-If we get to the end of the loop without finding a fault, then the
-word passes the test.  To convince yourself that the loop ends
-correctly, consider an example like \verb"'flossy'".  The
-length of the word is 6, so
-the last time the loop runs is when {\tt i} is 4, which is the
-index of the second-to-last character.  On the last iteration,
-it compares the second-to-last character to the last, which is
-what we want.
-
-\index{palindrome}
-
-Here is a version of \verb"is_palindrome" (see
-Exercise~\ref{palindrome}) that uses two indices; one starts at the
-beginning and goes up; the other starts at the end and goes down.
-
-\beforeverb
-\begin{verbatim}
-def is_palindrome(word):
-    i = 0
-    j = len(word)-1
-
-    while i<j:
-        if word[i] != word[j]:
-            return False
-        i = i+1
-        j = j-1
-
-    return True
-\end{verbatim}
-\afterverb
-
-Or, if you noticed that this is an instance of a previously-solved
-problem, you might have written:
-
-\beforeverb
-\begin{verbatim}
-def is_palindrome(word):
-    return is_reverse(word, word)
-\end{verbatim}
-\afterverb
-
-\index{problem recognition}
-\index{development plan!problem recognition}
-
-Assuming you did Exercise~\ref{is_reverse}.
-
-
-\section{Debugging}
-
-\index{debugging}
-\index{testing!is hard}
-\index{program testing}
-
-Testing programs is hard.  The functions in this chapter are
-relatively easy to test because you can check the results by hand.
-Even so, it is somewhere between difficult and impossible to choose a
-set of words that test for all possible errors.
-
-Taking \verb"has_no_e" as an example, there are two obvious
-cases to check: words that have an 'e' should return {\tt False};
-words that don't should return {\tt True}.  You should have no
-trouble coming up with one of each.
-
-Within each case, there are some less obvious subcases.  Among the
-words that have an ``e,'' you should test words with an ``e'' at the
-beginning, the end, and somewhere in the middle.  You should test long
-words, short words, and very short words, like the empty string.  The
-empty string is an example of a {\bf special case}, which is one of
-the non-obvious cases where errors often lurk.
-
-\index{special case}
-
-In addition to the test cases you generate, you can also test
-your program with a word list like {\tt words.txt}.  By scanning
-the output, you might be able to catch errors, but be careful:
-you might catch one kind of error (words that should not be
-included, but are) and not another (words that should be included,
-but aren't).
-
-In general, testing can help you find bugs, but it is not easy to
-generate a good set of test cases, and even if you do, you can't
-be sure your program is correct.
-
-\index{testing!and absence of bugs}
-
-According to a legendary computer scientist:
-
-\begin{quote}
-Program testing can be used to show the presence of bugs, but never to
-show their absence!
-
---- Edsger W. Dijkstra
-\end{quote}
-
-\index{Dijkstra, Edsger}
-
-
-\section{Glossary}
-
-\begin{description}
-
-\item[file object:] A value that represents an open file.
-\index{file object}
-\index{object!file}
-
-\item[problem recognition:] A way of solving a problem by
-expressing it as an instance of a previously-solved problem.
-\index{problem recognition}
-
-\item[special case:] A test case that is atypical or non-obvious
-(and less likely to be handled correctly).
-\index{special case}
-
-\end{description}
-
-
-\section{Exercises}
-
-\begin{ex}
-
-\index{Car Talk}
-\index{Puzzler}
-\index{double letters}
-
-This question is based on a Puzzler that was broadcast on the radio
-program {\em Car
-  Talk}\footnote{\url{www.cartalk.com/content/puzzler/transcripts/200725}}:
-
-\begin{quote}
-Give me a word with three consecutive double letters. I'll give you a
-couple of words that almost qualify, but don't. For example, the word
-committee, c-o-m-m-i-t-t-e-e. It would be great except for the `i' that
-sneaks in there. Or Mississippi: M-i-s-s-i-s-s-i-p-p-i. If you could
-take out those i's it would work. But there is a word that has three
-consecutive pairs of letters and to the best of my knowledge this may
-be the only word. Of course there are probably 500 more but I can only
-think of one. What is the word?
-\end{quote}
-
-Write a program to find it.  You can see my solution at
-\url{thinkpython.com/code/cartalk.py}.
-
-\end{ex}
-
-
-\begin{ex}
-Here's another {\em Car Talk}
-Puzzler\footnote{\url{www.cartalk.com/content/puzzler/transcripts/200803}}:
-
-\index{Car Talk}
-\index{Puzzler}
-\index{odometer}
-\index{palindrome}
-
-\begin{quote}
-``I was driving on the highway the other day and I happened to
-notice my odometer. Like most odometers, it shows six digits,
-in whole miles only. So, if my car had 300,000
-miles, for example, I'd see 3-0-0-0-0-0.
-
-``Now, what I saw that day was very interesting. I noticed that the
-last 4 digits were palindromic; that is, they read the same forward as
-backward. For example, 5-4-4-5 is a palindrome, so my odometer
-could have read 3-1-5-4-4-5.
-
-``One mile later, the last 5 numbers were palindromic. For example, it
-could have read 3-6-5-4-5-6.  One mile after that, the middle 4 out of
-6 numbers were palindromic.  And you ready for this? One mile later,
-all 6 were palindromic!
-
-``The question is, what was on the odometer when I first looked?''
-\end{quote}
-
-Write a Python program that tests all the six-digit numbers and prints
-any numbers that satisfy these requirements.  You can see my solution
-at \url{thinkpython.com/code/cartalk.py}.
-
-\end{ex}
-
-
-\begin{ex}
-Here's another {\em Car Talk} Puzzler you can solve with a
-search\footnote{\url{www.cartalk.com/content/puzzler/transcripts/200813}}:
-
-\index{Car Talk}
-\index{Puzzler}
-\index{palindrome}
-
-\begin{quote}
-``Recently I had a visit with my mom and we realized that
-the two digits that make up my age when reversed resulted in her
-age. For example, if she's 73, I'm 37. We wondered how often this has
-happened over the years but we got sidetracked with other topics and
-we never came up with an answer.
-
-``When I got home I figured out that the digits of our ages have been
-reversible six times so far. I also figured out that if we're lucky it
-would happen again in a few years, and if we're really lucky it would
-happen one more time after that. In other words, it would have
-happened 8 times over all. So the question is, how old am I now?''
-
-\end{quote}
-
-Write a Python program that searches for solutions to this Puzzler.
-Hint: you might find the string method {\tt zfill} useful.
-
-You can see my solution at \url{thinkpython.com/code/cartalk.py}.
-
-\end{ex}
 
 
 
