Mini word change
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65402 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -4468,7 +4468,7 @@ at \url{wikipedia.org/wiki/Shortest_path_problem}.
 \end{ex}
 
 
-\chapter{Case study: Files and Strings}
+\chapter{Case study: Searching for Information}
 
 In this chapter, we will bring several chapters together 
 to write some simple programs that scna data stored in files, 
