--- a/book.tex
+++ b/book.tex
@@ -428,10 +428,13 @@ We are surrounded in our daily lives with computers ranging
 from laptops to cell phones.  We can think of these computers
 as our ``personal assistants'' who can take care of many things
 on our behalf.  The hardware in our current-day computers 
-is essentially built to continuously as us the question, 
+is essentially built to continuously ask us the question, 
 ``What would you like me to do next?''.
 
-{\large Picture of PDA asking "What Next?"}
+\beforefig
+\centerline{\includegraphics[height=1.00in]{figs2/pda.eps}}
+\afterfig
+
 
 Our computers are fast and have vasts amounts of memory and 
 could be very helpful to us if we only knew the language to
@@ -475,6 +478,33 @@ for you to do the
 things that you are uniquely suited for.  You bring 
 creativity, intuition, and inventiveness to this
 partnership.  
+
+\section{Creativity and motivation}
+
+While this book is not intended for professional programmers, professional
+programming can be a very rewarding job both financially and personally.
+Building useful, elegant, and clever programs for others to use is a very
+creative activity.  Your computer or Personal Digital Assistant (PDA) 
+usually contains many different programs from many different groups of 
+programmers, each competing for your attention and interest.  They try 
+their best to meet your needs and give you a great user experience in the
+process.   In some situations, when you choose a piece of software, the 
+programmers are directly compensated because of your choice.
+
+If we think of programs as the creative output of groups of programmers,
+perhaps the following figure is a more sensible version of our PDA:
+
+\beforefig
+\centerline{\includegraphics[height=1.00in]{figs2/pda2.eps}}
+\afterfig
+
+For now, our primary motivation is not to make money or please end-users, but
+instead for us to be more productive in handling the data and 
+information that we will encounter in our lives.
+When you first start out, you will be both the programmer and end-user of
+your programs.  As you gain skill as a programmer and
+programming feels more creative to you, your thoughts may turn
+toward developing programs for others.
 
 \section{Computer hardware architecture}
 \index{hardware}
@@ -537,8 +567,9 @@ mostly be "talking" to the CPU and telling it what to
 do next.  Sometimes you will tell the CPU to use the main memory,
 secondary memory, network, or the input/output devices.
 
-{\large Picture of CPU, Memory, Etc. With 
-stick figure inside saying "do this" to the CPU}
+\beforefig
+\centerline{\includegraphics[height=1.50in]{figs2/arch.eps}}
+\afterfig
 
 You need to be the person who answers the CPU's "What next?" 
 question.  But it would be very uncomfortable to shrink you 
