--- a/book.tex
+++ b/book.tex
@@ -1148,7 +1148,7 @@ runs the software that we write; also called ``CPU'' or ``the processor''.
 \index{CPU}
 
 \item[main memory:] Stores programs and data.  Main memory loses 
-its information when the power is tunred off.
+its information when the power is turned off.
 \index{main memory}
 
 \item[secondary memory:] Stores programs and data and retains its 
@@ -1579,17 +1579,6 @@ You might want to keep this list handy.  If the interpreter complains
 about one of your variable names and you don't know why, see if it
 is on this list.
 
-\section{Choosing mnemonic variable names}
-
-\index{mnemonic}
-
-Mnemonic variables...
-
-% TBD
-
-\url{http://en.wikipedia.org/wiki/Mnemonic}
-
-
 \section{Statements}
 
 A statement is a unit of code that the Python interpreter can
@@ -2001,6 +1990,144 @@ v = 5     # velocity in meters/second.
 Good mnemonic variable names can reduce the need for comments, but
 long names can make complex expressions hard to read, so there is
 a tradeoff.
+
+\section{Choosing mnemonic variable names}
+
+\index{mnemonic}
+
+As long as you follow the simple rules of variable naming, and avoid
+reserved words, you have a lot of choice when you name your variables.
+In the beginning, this choice can be confusing both when you read a 
+program and when you write your own programs.  For example, the
+following three programs are identical in terms of what they accomplish,
+but very different when you read them and try to understand them.
+
+\beforeverb
+\begin{verbatim}
+a = 35.0
+b = 12.50
+c = a * b
+print c
+
+hours = 35.0
+rate = 12.50
+pay = hours * rate
+print pay
+
+x1q3z9ahd = 35.0
+x1q3z9afd = 12.50
+x1q3p9afd = x1q3z9ahd * x1q3z9afd
+print x1q3p9afd
+\end{verbatim}
+\afterverb
+%
+The Python interpreter sees all three of these programs as {\em exactly the 
+same} but humans see and understand these programs quite differently.  
+Humans will most quickly understand the {\bf intent} 
+of the second program because the 
+programmer has chosen variable names that reflect the intent of the programmer
+regarding what data will be stored in each variable.
+
+We call these wisely-chosen variable names ``menmonic variable names''.  The
+word {\em menmonic}\footnote{See 
+\url{http://en.wikipedia.org/wiki/Mnemonic}
+for an extended description of the word ``mnemonic''.} 
+means ``memory aid''.
+We choose mnemonic variable names to help us remember why we created the variable
+in the first place.
+
+While this all sounds great, and it is a very good idea to use mnemonic variable
+names, mnemonic variable names can get in the way of a beginning programmer's 
+ability to parse and understand code.  This is because beginning programmers 
+have not yet memorized the reserved words (there is only 31 of them) and sometimes
+variables which have names that are too descriptive start to look like 
+part of the language and not just well-chosen variable names.
+
+Take a quick look at the following Python sample code which loops through some data. 
+We will cover loops soon, but for now try to just puzzle through what this means:
+
+\beforeverb
+\begin{verbatim}
+for word in words:
+    print word
+\end{verbatim}
+\afterverb
+%
+What is happening here?  Which of the tokens (for, word, in, etc.) are reserved words
+and which are just variable names?  Does Python understand at a fundamental level 
+the notion of words?  Beginning programmers have touble separating what parts of the
+code {\em must} be the same as this example and what parts of the code are simply
+choices made by the programmer.
+
+The following code is equivalent to the above code:
+
+\beforeverb
+\begin{verbatim}
+for slice in pizza:
+    print slice
+\end{verbatim}
+\afterverb
+%
+It is easier for the beginning programmer to look at this code and know which 
+parts are reserved words defined by Python and which parts are simply variable
+names chosen by the programmer.  It is pretty clear that Python has no fundamental
+understanding of pizza and slices and the fact that a pizza consists of a set
+of one or more slices.
+
+But if our program is truly about reading data and looking for words in the data,
+{\tt pizza} and {\tt slice} are very un-mnemonic variable names choosing them 
+as variable names distracts from the meaning of the program.
+
+After a pretty short period of time, you will know the most common reserved words
+and you will start to see the reserved words jumping out at you:
+
+{\tt {\bf for} word {\bf in} words{\bf :}\\
+\verb"    "{\bf print} word }
+
+The parts of the code that are defined by 
+Python ({\tt for}, {\tt in}, {\tt print}, and {\tt :}) are in bold
+and the programmer chosen variables ({\tt word} and {\tt words}) are not in bold.  
+Many text editors are aware of Python
+syntax and will color reserved words differently to give you clues to keep 
+your variables and reserved words separate.
+After a while you will begin to read Python and quickly determine what
+is a variable and what is a reserved word.
+
+choices made by the programmer.
+
+The following code is equivalent to the above code:
+
+\beforeverb
+\begin{verbatim}
+for slice in pizza:
+    print slice
+\end{verbatim}
+\afterverb
+%
+It is easier for the beginning programmer to look at this code and know which 
+parts are reserved words defined by Python and which parts are simply variable
+names chosen by the programmer.  It is pretty clear that Python has no fundamental
+understanding of pizza and slices and the fact that a pizza consists of a set
+of one or more slices.
+
+But if our program is truly about reading data and looking for words in the data,
+{\tt pizza} and {\tt slice} are very un-mnemonic variable names choosing them 
+as variable names distracts from the meaning of the program.
+
+After a pretty short period of time, you will know the most common reserved words
+and you will start to see the reserved words jumping out at you:
+
+{\tt {\bf for} word {\bf in} words{\bf :}\\
+\verb"    "{\bf print} word }
+
+The parts of the code that are defined by 
+Python ({\tt for}, {\tt in}, {\tt print}, and {\tt :}) are in bold
+and the programmer chosen variables ({\tt word} and {\tt words}) are not in bold.  
+Many text editors are aware of Python
+syntax and will color reserved words differently to give you clues to keep 
+your variables and reserved words separate.
+After a while you will begin to read Python and quickly determine what
+is a variable and what is a reserved word.
 
 \section{Debugging}
 \index{debugging}
